# vapi

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  main.py  playbook.yaml  pyproject.toml  tox.ini
envs/: develop.yaml  master.yaml
handlers/: __init__.py  handlers.py  transfers.py  user_handler.py
models/: __init__.py  m_schema.py
utils/: __init__.py  router.py
